<resources>
    <string name="app_name">Benefits</string>
    <string name="action_settings">Settings</string>
    <string name="search_menu">Menu Pencarian</string>
    <string name="nama_umkm">Nama UMKM</string>
    <string name="deskripsi_umkm">Deskripsi UMKM</string>
    <string name="foto_umkm">Foto UMKM</string>
    <string name="alamat_umkm">Jl. Gegerkalong Girang</string>
    <string name="price_range">Price Range</string>
    <string name="rerata_ulasan">Rata-rata ulasan</string>
    <string name="search_box">Masukkan kata pencarian</string>
    <string name="search_button">Cari</string>
    <string name="search_result">Daftar UMKM</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="deskripsi_produk">Deskripsi Produk</string>
    <string name="harga_produk">Harga Produk</string>
    <string name="stok_produk">Stok Produk</string>
    <string name="penulis_ulasan">Penulis ulasan</string>
    <string name="isi_ulasan">Isi ulasan</string>
    <string name="tambah_ulasan">+ Tambah ulasan</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="daftar">Daftar</string>
    <string name="tap_hint">Sentuh untuk lihat detail</string>
    <string name="masuk">Masuk</string>
    <string-array name="menu_nonuser">
        <item>Cari</item>
        <item>Masuk</item>
        <item>Daftar</item>
    </string-array>
    <string-array name="menu_pengguna">
        <item>Cari</item>
        <item>Keluar</item>
    </string-array>
    <string-array name="menu_pengelola">
        <item>Cari</item>
        <item>Daftar UMKM</item>
        <item>Keluar</item>
    </string-array>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="hapus">Hapus</string>
    <string name="edit">Edit</string>
</resources>