<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/border"
    android:padding="20dp">

    <ImageView
        android:id="@+id/foto_produk"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_margin="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher_background"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2">

        <TextView
            android:id="@+id/nama_produk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/nama_produk"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/deskripsi_produk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi_produk"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/stok_produk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stok_produk"/>

        <TextView
            android:id="@+id/harga_produk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harga_produk"/>

    </LinearLayout>

</LinearLayout>