<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.DaftarUserActivity">

    <include layout="@layout/toolbar"/>

    <EditText
        android:id="@+id/nama_daftar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:hint="Nama anda"/>

    <EditText
        android:id="@+id/username_daftar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/password_daftar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <ImageView
        android:id="@+id/preview_gambar_user"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:scaleType="fitXY"
        android:background="@drawable/border_foto"/>

    <Button
        android:id="@+id/button_pilih_gambar_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:text="Pilih gambar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="18sp"
        android:text="Mendaftar sebagai:"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <RadioButton
            android:id="@+id/daftar_pengusaha_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pengusaha"/>

        <RadioButton
            android:id="@+id/daftar_pengguna_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pengguna biasa"/>
    </RadioGroup>

    <Button
        android:id="@+id/button_daftar_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/daftar"/>

</LinearLayout>