<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".Activity.DetailActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/nama_detail_umkm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:background="@drawable/background_nama_umkm"
                android:text="@string/nama_umkm"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/foto_detail_umkm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nama_detail_umkm"
                android:background="@drawable/background_foto_umkm"
                android:contentDescription="@string/nama_umkm"/>

            <TextView
                android:id="@+id/alamat_detail_umkm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/foto_detail_umkm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:paddingStart="70dp"
                android:paddingEnd="70dp"
                android:text="@string/alamat_umkm"
                app:drawableStartCompat="@drawable/ic_baseline_map_24"/>

            <LinearLayout
                android:id="@+id/deskripsi_umkm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/alamat_detail_umkm">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deskripsi_umkm"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/alamat_detail_umkm"/>

                <TextView
                    android:id="@+id/deskripsi_detail_umkm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/deskripsi_umkm"/>
            </LinearLayout>

            <TextView
                android:id="@+id/kontak_umkm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/deskripsi_umkm"
                app:layout_constraintBottom_toTopOf="@id/price_range"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:text="Kontak UMKM: "/>

            <LinearLayout
                android:id="@+id/price_range"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginRight="70dp"
                android:layout_marginLeft="70dp"
                android:orientation="vertical"
                android:background="@drawable/background_price_range"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/kontak_umkm">

                <TextView
                    android:id="@+id/price_range_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/price_range"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/price_range_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:text="@string/tap_hint"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ulasan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:orientation="vertical"
                android:background="@drawable/border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/price_range"
                app:layout_constraintBottom_toBottomOf="parent">


                <RatingBar
                    android:id="@+id/rerata_ulasan"
                    style="@style/Widget.AppCompat.RatingBar.Indicator"
                    android:isIndicator="true"
                    android:secondaryProgressTint="#00000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stepSize="0.1"
                    android:rating="2.3"/>

                <TextView
                    android:id="@+id/rerata_ulasan_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/rerata_ulasan"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/rerata_ulasan_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    android:text="@string/tap_hint"
                    android:textSize="10dp"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_baseline_edit_24"
        android:visibility="gone"/>
</RelativeLayout>